--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         </style>
     </head>
     <body>
-        <script src="js/player.js" type="module"></script>
+        <script src="player.js" type="module"></script>
     </body>
 </html>
