--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>lesson1</title>
         <style>
+            #main {
+                display: flex;
+                flex-direction: row;
+            }
+
             img {
                 width: 50px;
                 height: 50px;
@@ -11,6 +16,7 @@
         </style>
     </head>
     <body>
+        <div id="main"></div>
         <script src="player.js" type="module"></script>
     </body>
 </html>
